test/log/load/vgldcb1_v_i32_m.txt
vgldcb1_v_i32_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vgldcb1_v_i32_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vgldcb1_v_i32_m.c:37:6: warning: no previous prototype for 'vgldcb1_v_i32_m_golden' [-Wmissing-prototypes]
   37 | void vgldcb1_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *base,int32_t *index,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vgldcb1_v_i32_m.c: In function 'vgldcb1_v_i32_m_golden':
vgldcb1_v_i32_m.c:41:31: error: subscripted value is neither array nor pointer nor vector
   41 |                  exp_result[i][j*GROUP_DEPTH/ELE_WIDTH+k] = base[i*COMBO_STRIDE/ELE_WIDTH+ j*GROUP_STRIDE/ELE_WIDTH + k*ELE_STRIDE/ELE_WIDTH];
      |                               ^
vgldcb1_v_i32_m.c:37:39: warning: unused parameter 'mask' [-Wunused-parameter]
   37 | void vgldcb1_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *base,int32_t *index,int32_t *exp_result) {
      |                             ~~~~~~~~~~^~~~
vgldcb1_v_i32_m.c:37:53: warning: unused parameter 'maskoff' [-Wunused-parameter]
   37 | void vgldcb1_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *base,int32_t *index,int32_t *exp_result) {
      |                                            ~~~~~~~~~^~~~~~~
vgldcb1_v_i32_m.c:37:84: warning: unused parameter 'index' [-Wunused-parameter]
   37 | void vgldcb1_v_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *base,int32_t *index,int32_t *exp_result) {
      |                                                                           ~~~~~~~~~^~~~~
vgldcb1_v_i32_m.c: In function 'main':
vgldcb1_v_i32_m.c:62:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   62 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vgldcb1_v_i32_m.c:82:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   82 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgldcb1_v_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vgldcb1_v_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vgldcb1_v_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgldcb1_v_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed